--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,12 @@ log = "0.4.8"
 lazy_static = "1.4.0"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
+tokio = { version = "0.2.11", features = ["stream", "process", "io-util"] }
+async-stream = "0.2.0"
+futures-util = "0.3.1"
+futures-executor = "0.3.1"
+async-trait = "0.1.22"
+
+[dev-dependencies]
+futures-executor = "0.3.1"
+tokio = { version = "0.2.11", features = ["rt-core", "macros"] }
