--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,8 @@ edition = "2018"
 log = "0.4.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "0.2.11", features = ["stream", "process", "io-util"] }
+tokio = { version = "0.2.11", features = ["rt-core", "stream", "process", "io-util", "macros"] }
 async-trait = "0.1.22"
 
 [dev-dependencies]
-tokio = { version = "0.2.11", features = ["rt-core", "macros"] }
 pretty_env_logger = "0.3"
