--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 log = "0.4.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "0.2.11", features = ["rt-core", "stream", "process", "io-util", "macros"] }
+tokio = { version = "0.2.11", features = ["rt-core", "stream", "process", "io-util", "macros", "time"] }
 async-trait = "0.1.22"
 
 [dev-dependencies]
